Fix oveflow bug on mobile devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,7 @@
 
 html {
     height: 100%;
+    overflow-x: hidden;
     scroll-behavior: smooth;
     --scroll-behavior: smooth;
     -webkit-text-size-adjust: 100%;
